--- a/package.json
+++ b/package.json
@@ -69,10 +69,13 @@
     "@types/semver": "7.5.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "crypto-browserify": "^3.12.1",
     "husky": "^9.1.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "pretty-quick": "^4.2.2",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "sass": "^1.58.0",
     "shiki": "^1.0.0-beta.0",
     "typescript": "~4.9.5",
