--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "verbatimModuleSyntax": true
+    "verbatimModuleSyntax": true,
+    "types": [],
+    "module": "esnext",
+    "target": "es2022"
   },
 
   "references": [
