update: make modern UI/UX [WIP]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     // "ignoreDeprecations": "5.0",
     "lib": ["es2022", "dom"],
+    "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
